tests/purs/failing/InvalidViaType.out
Error found:
in module [33mMain[0m
at tests/purs/failing/InvalidViaType.purs:8:1 - 8:32 (line 8, column 1 - line 8, column 32)

  Cannot derive instance via [33m_[0m for
  [33m          [0m
  [33m  Main.C D[0m
  [33m          [0m
  because the type [33m_[0m is not of the required form T a_1 ... a_n.


See https://github.com/purescript/documentation/blob/master/errors/InvalidViaType.md for more information,
or to contribute content related to this error.

